1增加日志方法

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     compile project(path: ':shvideolibrary')
+    compile 'com.orhanobut:logger:2.1.1'
+    compile 'com.zxy.android:recovery:0.1.4'
+
 }
